# sidewing

./: CLAUDE.md  Makefile  README.md  agents.md  meson.build
docs/: TODO.md  implementation-plan.md  sidewing-spec.md  staba-spec.md
examples/plugins/: README.md  action-demo.30s.sh  available-disk-space.1m.sh  available-memory.10s.sh  github-assigned-prs.5m.sh  public-ip.5m.sh  variable-demo.1m.sh
src/: action-dispatcher.vala  application.css  application.vala  bar-window.vala  build-config.vala.in  cli-runner.vala  desktop-integration.vala  log-service.vala  main.vala  menu-builder.vala  meson.build  models.vala  monitor-manager.vala  plugin-manager.vala  plugin-runner.vala  settings-store.vala  variables-store.vala  xbar-parser.vala
